package imhotep.shardmaster;

option java_package = "com.indeed.imhotep.shardmaster.protobuf";
option java_outer_classname = "ImhotepShardMasterProtos";
option java_multiple_files = true;

message AssignedShard {
  required string dataset = 1;
  required string shard_path = 2;
}

message ShardMasterResponse {
  enum ResponseCode {
    OK = 1;
    ERROR = 2;
  }

  optional ResponseCode response_code = 1 [default = OK];
  // in case for ERROR
  optional string error_message = 2;
  // for GET_ASSIGNMENT
  repeated AssignedShard assigned_shards = 3;
}

message HostAndPort {
  optional string host = 1;
  optional int32 port = 2;
}

message ShardMasterRequest {
  enum RequestType {
    GET_ASSIGNMENT = 1;
  }

  required RequestType request_type = 1;
  required HostAndPort node = 2;
}